--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
       <div class="coming-soon"></div>
     </div>
     <script src="config.js"></script>
-    <script src="./scripts/index.js"></script>
+    <script type="module" src="./scripts/index.mjs"></script>
   </body>
 </html>
