--- a/pages/movie.html
+++ b/pages/movie.html
@@ -25,12 +25,8 @@
           <i class="user fa-regular fa-user"></i>
         </div>
       </nav>
-    <div id="container">
-        <!-- <div class="ops"></div>
-        <div class="details"></div>
-        <div class="suggestion"></div> -->
-    </div>
+    <div id="container"></div>
     <script src="/config.js"></script>
-    <script src="/scripts/movie.js"></script>
+    <script type="module" src="/scripts/movie.mjs"></script>
 </body>
 </html>
