--- a/public/movie.html
+++ b/public/movie.html
@@ -26,7 +26,7 @@
         </div>
       </nav>
     <div id="container"></div>
-    <script src="/config.js"></script>
+    <script src="./config.js"></script>
     <script type="module" src="/scripts/movie.mjs"></script>
 </body>
 </html>
