--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/src/styles/index.css" />
+    <link rel="stylesheet" href="styles/index.css" />
     <link
       rel="shortcut icon"
       href="https://ucarecdn.com/90db4c20-a101-4aa1-b7d4-6afcdf40930d/movie.png"
@@ -41,6 +41,6 @@
       <div class="coming-soon"></div>
     </div>
     <script src="./config.js"></script>
-    <script type="module" src="/src/scripts/index.mjs"></script>
+    <script type="module" src="scripts/index.mjs"></script>
   </body>
 </html>
