--- a/public/movie.html
+++ b/public/movie.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="https://ucarecdn.com/90db4c20-a101-4aa1-b7d4-6afcdf40930d/movie.png" type="image/x-icon">
-    <link rel="stylesheet" href="/styles/movie.css">
+    <link rel="stylesheet" href="styles/movie.css">
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
@@ -27,6 +27,6 @@
       </nav>
     <div id="container"></div>
     <script src="./config.js"></script>
-    <script type="module" src="/scripts/movie.mjs"></script>
+    <script type="module" src="scripts/movie.mjs"></script>
 </body>
 </html>
