--- a/public/movie.html
+++ b/public/movie.html
@@ -26,7 +26,12 @@
         </div>
       </nav>
     <div id="container"></div>
-    <script src="./config.js"></script>
+    <script>
+      window.env = {
+        NEXT_PUBLIC_API_TOKEN: "{{ NEXT_PUBLIC_API_TOKEN }}",
+        NEXT_PUBLIC_API_KEY: "{{ NEXT_PUBLIC_API_KEY }}"
+      };
+    </script>
     <script type="module" src="scripts/movie.mjs"></script>
 </body>
 </html>
