--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,12 @@
       <h1 id="head">Coming Soon</h1>
       <div class="coming-soon"></div>
     </div>
-    <script src="./config.js"></script>
+    <script>
+      window.env = {
+        NEXT_PUBLIC_API_TOKEN: "{{ NEXT_PUBLIC_API_TOKEN }}",
+        NEXT_PUBLIC_API_KEY: "{{ NEXT_PUBLIC_API_KEY }}"
+      };
+    </script>
     <script type="module" src="scripts/index.mjs"></script>
   </body>
 </html>
