--- a/public/movie.html
+++ b/public/movie.html
@@ -26,12 +26,7 @@
         </div>
       </nav>
     <div id="container"></div>
-    <script>
-      window.env = {
-        NEXT_PUBLIC_API_TOKEN: "{{ NEXT_PUBLIC_API_TOKEN }}",
-        NEXT_PUBLIC_API_KEY: "{{ NEXT_PUBLIC_API_KEY }}"
-      };
-    </script>
+    <script src="env.js"></script>
     <script type="module" src="scripts/movie.mjs"></script>
 </body>
 </html>
