--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       <h1>MovieX</h1>
       <div>
         <span>
-          <input type="text" placeholder="Search" />
+          <input id="search" type="text" placeholder="Search" />
           <i class="fa-solid fa-magnifying-glass"></i>
         </span>
         <i class="user fa-regular fa-user"></i>
