--- a/public/login.html
+++ b/public/login.html
@@ -114,7 +114,7 @@
             if (!(uname.value === storedUser.uname && hashedPwd === storedUser.pwd)) {
                 alert("Incorrect username or password!")
             } else {
-                window.location.href = '../index.html'
+                window.location.href = './index.html'
                 alrt(`Welcome back ${uname.value}!`)
             }
 
