--- a/public/signup.html
+++ b/public/signup.html
@@ -127,7 +127,7 @@
 
         localStorage.setItem("user", JSON.stringify(theUser));
         alert(`Welcome ${uname.value}, you're registered now!`);
-        window.location.href = '../index.html';
+        window.location.href = './index.html'
 
         uname.value = "";
         email.value = "";
