--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
       <div class="latest-shows"></div>
       <h1 id="head">Coming Soon</h1>
       <div class="coming-soon"></div>
-      <div id="search-results" class="search-results"></div>
+      <!-- <div id="search-results" class="search-results"></div> -->
     </div>
     <script src="env.js"></script>
     <script type="module" src="scripts/index.mjs"></script>
