search feat initial implementation

--- a/public/movie.html
+++ b/public/movie.html
@@ -19,13 +19,14 @@
         <h1>MovieX</h1>
         <div>
           <span>
-            <input type="text" placeholder="Search" />
+            <input id="search" type="text" placeholder="Search" />
             <i class="fa-solid fa-magnifying-glass"></i>
           </span>
           <i class="user fa-regular fa-user"></i>
         </div>
       </nav>
     <div id="container"></div>
+    <div class="search-res"></div>
     <script src="env.js"></script>
     <script type="module" src="scripts/movie.mjs"></script>
 </body>
